#740 - notify on connection status change. And add config entry for notifys.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -844,6 +844,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
+preferences.dialog.show_notifications=Show notifications when minimized
 preferences.dialog.usedeltaonlan=Use delta sync on LAN
 preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.userecyclebin=Use recycle bin (default)
@@ -1065,6 +1066,10 @@ status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
 
 statusbar.synchronizing=Synchronizing...
+statusbar.status_change.title=Connection Status
+statusbar.status_change.connected=PowerFolder is connected
+statusbar.status_change.disabled=PowerFolder is disabled
+statusbar.status_change.disconnected=PowerFolder is disconnected
 
 synchronisation.notice.title=Activated synchronization profile {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue?
