#853 - folder can now have an invalid local base

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -27,6 +27,7 @@ clearrecentdownloads.icon=icons/Clear.gif
 showfileinfo.icon=icons/SendMessage.gif
 aborttransfer.icon=icons/Abort.gif
 folders.icon=icons/Folders.gif
+folder_invalid.icon=icons/Folder_invalid.gif
 #openchat.icon=icons/Chat.gif
 #sendinvitation.icon=icons/Chat.gif
 #reconnect.icon=icons/Connect.gif
