--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -909,6 +909,7 @@ quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
 quickinfo.download.title=Download Status
 quickinfo.folder.disconnected=No other computer connected
+quickinfo.folder.invalid_base_dir=The local folder location is invalid
 quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
