#991 - partial - create default folder from basic setup - no OS yet.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1181,8 +1181,7 @@ white_list.description=Adds a file definition to the ignore patterns
 white_list.key=I
 white_list.name=Add to ignore patterns
 
-winutils.shortcut.description=This shortcut was placed here by PowerFolder
-                                                                                    Fri
+winutils.shortcut.description=This shortcut was placed here by PowerFolder                                                                                    
 wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.backup_panel.pcsjoin=Other computers can join this folder now
 wizard.backup_panel.select=Please select the directory which should be backed up
@@ -1191,6 +1190,8 @@ wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
+wizard.basicsetup.setup_default=Setup default synchronized folder
+wizard.basicsetup.default_folder_name=default
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choose_location.select=Please select the directory
