#920 - rename sync profiles and adjust wizard.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -160,23 +160,23 @@ dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
-dialog.create_edit_profile.duplicate_profile_title=Duplicate profile
-dialog.create_edit_profile.cannot_save_name=This profile cannot be saved because\nthere is already a profile named {0}
-dialog.create_edit_profile.cannot_save_profile=This profile cannot be saved because\nit is identical to profile {0}
+dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
+dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
+dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
 dialog.create_edit_profile.auto_download_from_friends=Autodownload from friends
 dialog.create_edit_profile.auto_download_from_other=Autodownload from others
 dialog.create_edit_profile.change_detection_disabled=Change detection disabled
 dialog.create_edit_profile.configure.key=C
 dialog.create_edit_profile.configure.name=Configure
-dialog.create_edit_profile.configure_from=Configure from an existing profile
-dialog.create_edit_profile.create_button.description=Create a custom profile
+dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
+dialog.create_edit_profile.create_button.description=Create a custom transfer mode
 dialog.create_edit_profile.create_button.key=C
 dialog.create_edit_profile.create_button.name=Create
 dialog.create_edit_profile.daily_sync=Daily synchronization
-dialog.create_edit_profile.delete_button.description=Delete this profile
+dialog.create_edit_profile.delete_button.description=Delete this transfer mode
 dialog.create_edit_profile.delete_button.key=D
 dialog.create_edit_profile.delete_button.name=Delete
-dialog.create_edit_profile.edit_button.description=Edit this profile
+dialog.create_edit_profile.edit_button.description=Edit this transfer mode
 dialog.create_edit_profile.edit_button.key=E
 dialog.create_edit_profile.edit_button.name=Edit
 dialog.create_edit_profile.every_day=Every day
@@ -186,11 +186,11 @@ dialog.create_edit_profile.regular_sync=Regular synchronization
 dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
 dialog.create_edit_profile.time_between_scans=(Maximum) time until chage detection
-dialog.create_edit_profile.title_create=Create custom synchronization profile
-dialog.create_edit_profile.title_edit=Edit custom synchronization profile
+dialog.create_edit_profile.title_create=Create custom transfer mode
+dialog.create_edit_profile.title_edit=Edit custom transfer mode
 dialog.create_edit_profile.weekdays=Weekdays
 dialog.create_edit_profile.weekends=Weekends
-dialog.delete_profile.title=Delete custom synchronization profile
+dialog.delete_profile.title=Delete custom transfer mode
 dialog.directorychooser.new.description=New directory
 dialog.directorychooser.new.exists={0}\nalready exists
 dialog.directorychooser.new.key=N
@@ -201,7 +201,7 @@ dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatal Error
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.newdirectorycreator.title=New directory
-dialog.synchronization.choose=Please choose your sync action
+dialog.synchronization.choose=Please choose your synchronization action
 dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
 dialog.synchronization.duplicate.title=Duplicate use
@@ -210,7 +210,7 @@ dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
 dialog.synchronization.send_own_changes=Publish own changes
 dialog.synchronization.sychronizing=Synchronizing...
-dialog.synchronization.title=Project synchronization
+dialog.synchronization.title=Manual synchronization
 dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
@@ -346,6 +346,7 @@ foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
 foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
+foldercreate.dialog.maual_sync=Synchronize folder manually
 foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.select_file.text=Select file
@@ -435,7 +436,7 @@ folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Add
 folderpanel.settingstab.add_patterns.text_1=The following ignore patterns will be added
 folderpanel.settingstab.add_patterns.title=Add ignore pattern
-folderpanel.settingstab.choose_sync_profile=Choose synchronization profile
+folderpanel.settingstab.choose_transfer_mode=Choose transfer mode
 folderpanel.settingstab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
 folderpanel.settingstab.editbutton.description=Edit a pattern
@@ -1077,16 +1078,16 @@ synchronisation.warning.automatic_deletions_notice=This mode will also synchroni
 synchronisation.warning.explanation=You have selected synchronization profile '{0}' for folder {1}.
 synchronisation.warning.title=Activate synchronization profile {0} for {1}
 
-syncprofile.autodownload_all.name=Auto-download
 syncprofile.autodownload_friends.name=Auto-download friends
-syncprofile.backupsource.name=Backup (Source)
-syncprofile.backuptarget.name=Backup (Target)
+syncprofile.automatic_download.name=Automatic download
+syncprofile.automatic_synchronization.name=Automatic synchronization
+syncprofile.backup_source.name=Backup (source)
+syncprofile.backup_target.name=Backup (target)
 syncprofile.custom.name=Custom profile
 syncprofile.disabled.name=Disabled
-syncprofile.manualdownload.name=Hosting (Manual download)
+syncprofile.host_files.name=Host files
+syncprofile.manual_synchronization.name=Manual synchronization
 syncprofile.no_sync.name=No synchronization
-syncprofile.projectwork.name=Project work (Manual sync)
-syncprofile.syncpcs.name=Mirror
 
 systemservice.options.info1=Use these options install/uninstall
 systemservice.options.info2=PowerFolder as system service.
@@ -1244,6 +1245,7 @@ wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.setup_folder.sendinvitation=Send invitations afterwards
 wizard.setup_folder.title=Create Folder
+wizard.setup_folder.transfer_mode=Transfer mode
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
@@ -1254,7 +1256,7 @@ wizard.setupsuccess=Setup successfully
 wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
-wizard.syncpcspanel.select=Please select the directory which should be mirrored
+wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
 wizard.webservice.enteraccount=Please enter your account details to login to Online Storage
 wizard.webservice.learnmore=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
@@ -1267,7 +1269,7 @@ wizard.whattodo.backup_folder=Backup a folder
 wizard.whattodo.custom_sync=Share a folder (customized)
 wizard.whattodo.hostwork=Host a folder
 wizard.whattodo.load_invite=Open invitation file
-wizard.whattodo.mirror_folder=Mirror a folder
+wizard.whattodo.synchronized_folder=Setup a synchronized folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
