#1030 - Refactor friens checkboxes as dropdown list.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -500,6 +500,9 @@ friendspanel.connected=Connected
 friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
 friendspanel.unable_to_connect=Currently online (Unable to connect)
+friends_panel.show_all_friends_and_connected_lan=Show all friends and connected LAN computers
+friends_panel.show_online_friends_only=Show online friends only
+friends_panel.show_online_friends_and_connected_lan=Show online friends and connected LAN computers
 
 general.accept=Accept
 general.apply=Apply
@@ -579,10 +582,6 @@ hide_preview.name=Hide Preview Folders
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown
-
-include_lan.description=All LAN users will be included in this search result
-include_lan.key=I
-include_lan.name=Include other LAN computers
 
 infoside.title=Information
 
