--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -500,9 +500,9 @@ friendspanel.connected=Connected
 friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
 friendspanel.unable_to_connect=Currently online (Unable to connect)
-friends_panel.show_all_friends_and_connected_lan=Show all friends and connected LAN computers
+friends_panel.show_all_friends_and_connected_lan=Show all friends and online LAN computers
 friends_panel.show_online_friends_only=Show online friends only
-friends_panel.show_online_friends_and_connected_lan=Show online friends and connected LAN computers
+friends_panel.show_online_friends_and_connected_lan=Show online friends and LAN computers
 
 general.accept=Accept
 general.apply=Apply
