#883 - fix spam warning - fix null pointer with new files tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1071,7 +1071,7 @@ statusbar.status_change.connected=PowerFolder is connected
 statusbar.status_change.disabled=PowerFolder is disabled
 statusbar.status_change.disconnected=PowerFolder is disconnected
 
-synchronisation.notice.title=Activated synchronization profile {0}
+synchronisation.notice.title=Activated transfer mode {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue?
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronisation.warning.explanation=You have selected synchronization profile '{0}' for folder {1}.
