#1026 - partial - remove NewFilesTab and show new files in bold.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -279,6 +279,7 @@ fileinfo.newversion_availeble=New version of file available
 fileinfo.normal=Local available
 fileinfo.notavailable=Not available
 fileinfo.remote_deleted=Newer version deleted by other user
+file_info.recently_downloaded=Recently downloaded
 fileinfo.status=Status
 fileinfo.uploading=Uploading
 fileinfo.version=Version
@@ -425,8 +426,6 @@ folderpanel.hometab.total_size=Total size
 folderpanel.hometab.working.description=The folder is being moved
 folderpanel.hometab.working.title=Moving folder
 folderpanel.members.key=M
-folderpanel.new_files.key=N
-folderpanel.new_files_tab.title=New Files
 folderpanel.settings.key=S
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
@@ -687,9 +686,6 @@ networkstatisticspanel.online_users=Online users
 networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Total size of all available files
 networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
-
-new_files_tab.cleanup_activity.title=Cleaning up
-new_files_tab.cleanup_activity.description=Cleaning up old files
 
 nodeinfo.error=Unable to request node information
 nodeinfo.requesting=Requesting node information...
