--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -20,6 +20,8 @@
 #
 
 pro.download_csv.name=Download as CSV
+pro.download_csv.key=D
+pro.download_csv.description=Downloads the list of accounts as CSV
 
 setup.description=Sets up new or joins existing PowerFolders
 setup.key=s
@@ -1186,7 +1188,7 @@ wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
-wizard.basicsetup.setup_default=Setup default synchronized folder
+wizard.basicsetup.setup_default=Setup default synchronized folder.
 wizard.basicsetup.default_folder_name=default
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
