--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1189,7 +1189,7 @@ wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
 wizard.basicsetup.setup_default=Setup default synchronized folder.
-wizard.basicsetup.default_folder_name=default
+wizard.basicsetup.default_folder_name=Synchronized Files
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choose_location.select=Please select the directory
