#1026 - partial - cleaner detection of recently deleted files

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -264,6 +264,11 @@ estimation.unknown=unknown
 filecopier.progressdialog.text=Copy files...
 filecopier.progressdialog.title=Copy files progress
 
+file_filter_panel.local_and_incoming=Local and incoming files
+file_filter_panel.local_files_only=Local files only
+file_filter_panel.incoming_files_only=Incoming files only
+file_filter_panel.new_files_only=New files only
+file_filter_panel.deleted_and_previous_files=Deleted and previous files
 fileinfo.availability=Availability
 fileinfo.available=Available
 fileinfo.deleted=Deleted
