--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -300,10 +300,15 @@ filelist.filefilter.normal=local
 filelist.filefilter.searchfieldinfo=Enter keywords to search...
 filelist.modifiedby=Modified by
 filelist.name=Name
-filelist.recursive=flat view
+filelist.recursive=Flat view
 filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=No files available... add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching file list
+
+files_tab.local_files=Local files: {0}
+files_tab.incoming_files=Incoming files: {0}
+files_tab.deleted_files=Deleted files: {0}
+files_tab.recycled_files=Recycled files: {0}
 
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
