#991 - move default folder create to LoginOnlineStorage

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1198,7 +1198,6 @@ wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
-wizard.basicsetup.setup_default=Setup default synchronized folder.
 wizard.basicsetup.default_folder_name=Synchronized Files
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
@@ -1232,6 +1231,7 @@ wizard.loadinvitation.choosefile=Choose the invitation file
 wizard.loadinvitation.select=Select invitation file
 wizard.loadinvitation.selectfile=Please select invitation file
 wizard.loadinvitation.title=Load invitation
+wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
