#995 - Date/Time and number format I18n.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -134,6 +134,12 @@ createshortcut.description=Creates a shortcut to this PowerFolder on your deskto
 createshortcut.key=D
 createshortcut.name=Create Desktop Shortcut
 
+date_format.time_only_date=[HH:mm:ss]
+date_format.detailed_time=[HH:mm:ss:SSS]
+date_format.full_date=MM/dd/yyyy HH:mm:ss
+date_format.file_date=MM/dd/yyyy HH:mm
+date_format.file_date_hours=HH:mm
+
 delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
@@ -707,6 +713,8 @@ notification_handler.ignore.text=Ignore
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
+number_format.number=#,###,###,###.##
+number_format.long=#,###,###,###
 onepublicfolderpanel.estimated_size_in_files=Estimated size\: {0} files ({1})
 onepublicfolderpanel.file_list_not_found=File list not found
 onepublicfolderpanel.no_one_online_found=No one online found for this folder, will try anyway
