1057 - change What is this? links to use an icon.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -47,6 +47,7 @@ un_black_list.icon=icons/UnList.gif
 un_white_list.icon=icons/UnList.gif
 abortcopy.icon=icons/Forbid.gif
 showhidefiledetails.icon=icons/Properties.gif
+question.icon=icons/Question.gif
 
 # Toolbar icons
 wizard.icon=icons/toolbar/NewFolder-48.png
