--- a/build.xml
+++ b/build.xml
@@ -164,7 +164,7 @@ For creation of the installer:
 			<zipgroupfileset refid="libs" />
 		</jar>
 
-		<signjar jar="${dist.dir}\PowerFolder.jar" keystore="${KeystoreLocation}" storepass="${SignPassword}" alias="myKey" />
+		<signjar jar="${dist.dir}\PowerFolder.jar" keystore="${KeystoreLocation}" storepass="${SignPassword}" alias="${SignAlias}" />
 	</target>
 
 	<!-- generate an installer  -->
