--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -274,7 +274,7 @@ file_filter_panel.local_and_incoming=Local and incoming files
 file_filter_panel.local_files_only=Local files only
 file_filter_panel.incoming_files_only=Incoming files only
 file_filter_panel.new_files_only=New files only
-file_filter_panel.deleted_and_previous_files=Deleted and previous files
+file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 fileinfo.availability=Availability
 fileinfo.available=Available
 fileinfo.deleted=Deleted
