#1026 - Fix text alignment and empty new folders

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -311,10 +311,10 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching file list
 
-files_tab.local_files=Local files: {0}
-files_tab.incoming_files=Incoming files: {0}
-files_tab.deleted_files=Deleted files: {0}
-files_tab.recycled_files=Recycled files: {0}
+files_tab.local=Local: {0}
+files_tab.incoming=Incoming: {0}
+files_tab.deleted=Deleted: {0}
+files_tab.recycled=Recycled: {0}
 
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
