--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -50,7 +50,7 @@ about.dialog.contributers=Contributers
 about.dialog.documentation=Documentation
 about.dialog.general_information=General Information
 about.dialog.homepage=Homepage
-about.dialog.professional_folder_sharing_tool=Sync, access, share and backup files easily
+about.dialog.sync_your_world=Sync your World
 about.dialog.send_bug_report=Send Bug Report
 about.dialog.send_bug_report.key=B
 about.dialog.support=Support
