--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -193,7 +193,7 @@ dialog.create_edit_profile.profile_name=Profile name
 dialog.create_edit_profile.regular_sync=Regular synchronization
 dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
-dialog.create_edit_profile.time_between_scans=(Maximum) time until chage detection
+dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.create_edit_profile.title_edit=Edit custom transfer mode
 dialog.create_edit_profile.weekdays=Weekdays
@@ -645,7 +645,7 @@ lowmemory.do_nothing=Do Nothing
 lowmemory.dont_autodetect=Do not detect low memory
 lowmemory.increase=Increase Memory
 lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-lowmemory.warn=PowerFolder is running out of available memory.\n\nPlease visit http://wiki.powerfolder.com/wiki/ for advice on incresing available memory.
+lowmemory.warn=PowerFolder is running out of available memory.\n\nPlease visit http://wiki.powerfolder.com/wiki/ for advice on increasing available memory.
 lowmemory.title=Low memory
 
 masternode.nobody=- nobody -
