--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -331,7 +331,7 @@ filenameproblem.ends_with_illegal_char.description=The filename ends with charac
 filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
 filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
 filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
-filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "control" characters (ASCII code 0 till 31)\nare not allowed on those computers
 filenameproblem.reserved_filename=The filename is a reserved filename on Windows
 filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
 filenameproblem.to_long=The filename is to long
