#1071 -Show 'In Recycle Bin' in availablilty. Refs #1071

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -283,6 +283,7 @@ fileinfo.downloading_from_member=Downloading from {0}
 fileinfo.expected=Expected
 fileinfo.header=File Details
 fileinfo.ignore=This file is excluded from synchronization
+fileinfo.in_recycle_bin=In Recycle Bin
 fileinfo.location=Location
 fileinfo.modifiedby=Modified by
 fileinfo.modifieddate=Modified on
