--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,42 @@
 # http://www.powerfolder.com
 #
 
+pro.wizard.activation.successful=Activation successful
+pro.wizard.activation.thanks_activation=Thank you for activating PowerFolder Pro.
+pro.wizard.activation.thanks_purchase=Thank you for purchasing PowerFolder Pro.
+pro.wizard.activation.thanks_additional=Thank you for purchasing additional\nPowerFolder Pro licenses.
+pro.wizard.activation.pro_activation=PowerFolder Pro Activation
+pro.wizard.activation.online_activation=Online Activation
+pro.wizard.activation.file_activation=File Activation
+pro.wizard.activation.key_file=License key file
+pro.wizard.activation.choose_key_file=Choose License key file
+pro.wizard.activation.error_unable_to_read=Unable to read
+pro.wizard.activation.error_reading_file=Error while reading license key file
+pro.wizard.activation.error_invalid_key=Invalid license key
+pro.wizard.activation.please_activate=Please activate your copy of PowerFolder Pro!
+pro.wizard.activation.register_now_trial_1=Register now and get your 30-days trial of
+pro.wizard.activation.register_now_trial_2=PowerFolder Pro. PLUS: 5 GB online space.
+pro.wizard.activation.register_now=Register now
+pro.wizard.activation.key_expired=Your license key has expired!
+pro.wizard.activation.key_valid_till=Key valid till:
+pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
+pro.wizard.activation.order_now=Click here to order PowerFolder Pro
+pro.wizard.activation.key_abuse=License key abuse detected.
+pro.wizard.activation.computers_allowed=Computers allowed:
+pro.wizard.activation.computers_found=Computers found:
+pro.wizard.activation.order_additional=Click here to order additional licenses
+pro.wizard.activation.activating=Activating PowerFolder Pro
+pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
+pro.wizard.activation.no_key_available=No valid license key available
+pro.wizard.activation.one_key_available=Login successful. Got one license key.
+pro.wizard.activation.multiple_key_select=Login successful. Please select the license key to use.
+pro.wizard.activation.confirm_key=Please confirm the following activation data.
+pro.wizard.activation.license_key=License Key
+pro.wizard.activation.number_of_computers=Allowed computers
+pro.wizard.activation.update_service_account=Update Service Account
+pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
+
+
 pro.download_csv.name=Download as CSV
 pro.download_csv.key=D
 pro.download_csv.description=Downloads the list of accounts as CSV
@@ -589,6 +625,8 @@ general.webservice=Online Storage
 general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
+general.email=Email
+general.password=Password
 
 hideoffline.description=Offline users will be filtered from this search result
 hideoffline.key=H
