--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -31,8 +31,7 @@ pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.error_unable_to_read=Unable to read
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_invalid_key=Invalid license key
-pro.wizard.activation.please_activate=Please activate your copy of PowerFolder Pro!
-pro.wizard.activation.register_now_trial_1=Register now and get your 30-days trial of
+pro.wizard.activation.register_now_trial_1=Free: Register now for your 30-days trial of
 pro.wizard.activation.register_now_trial_2=PowerFolder Pro. PLUS: 5 GB online space.
 pro.wizard.activation.register_now=Register now
 pro.wizard.activation.key_expired=Your license key has expired!
@@ -53,7 +52,9 @@ pro.wizard.activation.license_key=License Key
 pro.wizard.activation.number_of_computers=Allowed computers
 pro.wizard.activation.update_service_account=Update Service Account
 pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
-
+pro.wizard.activation.contact_support=Contact the PowerFolder support
+pro.wizard.activation.try_again=Try again
+pro.wizard.activation.recover_password=Recover password
 
 pro.download_csv.name=Download as CSV
 pro.download_csv.key=D
