--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1241,7 +1241,7 @@ winutils.shortcut.description=This shortcut was placed here by PowerFolder
 wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.backup_panel.pcsjoin=Other computers can join this folder now
 wizard.backup_panel.select=Please select the directory which should be backed up
-wizard.basicsetup.enternick=Please enter your nickname
+wizard.basicsetup.computer_name=Name of this computer
 wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
