--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -41,10 +41,10 @@ open_local_folder.icon=icons/Directory.gif
 webservice_request_folder_join.icon=icons/PowerFolder.gif
 webservice_request_folder_leave.icon=icons/PowerFolder.gif
 remove_from_recycle_bin.icon=icons/Delete.gif
-black_list.icon=icons/BlackList.gif
-white_list.icon=icons/WhiteList.gif
-un_black_list.icon=icons/UnList.gif
-un_white_list.icon=icons/UnList.gif
+#black_list.icon=icons/BlackList.gif
+#white_list.icon=icons/WhiteList.gif
+#un_black_list.icon=icons/UnList.gif
+#un_white_list.icon=icons/UnList.gif
 abortcopy.icon=icons/Forbid.gif
 showhidefiledetails.icon=icons/Properties.gif
 question.icon=icons/Question.gif
