--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,11 @@
 # http://www.powerfolder.com
 #
 
+online_storage_change_account.name=Change
+online_storage_change_account.key=C
+online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
+
+
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
