refs #693 unattended install

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+dialog.updatecheck.downloadAndUpdateSilent=Download and silently update now
 general.reject=Reject
 online_storage_change_account.name=Change
 online_storage_change_account.key=C
@@ -221,12 +222,12 @@ dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
 dialog.updatecheck.developmentversion.optionrestart=Restart
-dialog.updatecheck.downloadAndUpdate=Download and Update now
+dialog.updatecheck.downloadAndUpdate=Download and update now
 dialog.updatecheck.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
 dialog.updatecheck.failed.title=Update failed
-dialog.updatecheck.gotoHomepage=Go to PowerFolder Homepage
+dialog.updatecheck.gotoHomepage=Go to PowerFolder homepage
 dialog.updatecheck.noUpdateAvailable=This version is up to date
-dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
+dialog.updatecheck.nothingNeverAsk=Nothing and never ask again
 dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.updatecheck.title=Newer version available
 dialog.user_select.online_only=
