Added port for maggie

--- a/src/test-resources/ControllerMaggie.config
+++ b/src/test-resources/ControllerMaggie.config
@@ -4,7 +4,8 @@ nodeid=randomstringMaggie
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=Maggie
-random-port=true
+random-port=false
+port=34661
 verbose=true
 disableui=true
 uploadlimit=0
