--- a/src/test-resources/ControllerBartUI.config
+++ b/src/test-resources/ControllerBartUI.config
@@ -4,7 +4,8 @@ nodeid=randomstringBartUI
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=BartUI
-random-port=true
+random-port=false
+port=3457
 verbose=true
 disableui=false
 uploadlimit=0
