refs #1098 german translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+wizard.login_online_storage.connecting=Connecting...
 dialog.updatecheck.downloadAndUpdateSilent=Download and silently update now
 general.reject=Reject
 online_storage_change_account.name=Change
@@ -207,10 +208,10 @@ dialog.fatalerror.title=Fatal Error
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your synchronization action
-dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
-dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
+dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
+dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.title=Duplicate use
-dialog.synchronization.duplicate.use=This profile is used by the following folders\:
+dialog.synchronization.duplicate.use=This transfer mode is used by the following folders\:
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
 dialog.synchronization.send_own_changes=Publish own changes
@@ -1158,7 +1159,7 @@ syncprofile.backup_source.name=Backup (source)
 syncprofile.backup_target.name=Backup (target)
 syncprofile.custom.name=Custom profile
 syncprofile.disabled.name=Disabled
-syncprofile.host_files.name=Host files
+syncprofile.host_files.name=Share/Send
 syncprofile.manual_synchronization.name=Manual synchronization
 syncprofile.no_sync.name=No synchronization
 
